10.0.0 - added migration